# NextGengine

./: .gitignore  .gitmodules  CMakeLists.txt  NextGengine.sln  README.md
Assets/: CMakeLists.txt
Assets/shaders/: CMakeLists.txt
Assets/shaders/PushConstants/: pushConstants.frag.spv  pushConstants.vert
Assets/shaders/TestResources/: testResources.frag  testResources.vert.spv
Assets/test_assets/: test_vert2D.v2d  test_vert2D_3C.v2d3c
Core/: Core.vcxproj  Core.vcxproj.filters  TODO.txt  camera.h  main.cpp  oc_tree.cpp  oc_tree.h  test_code.h  tools.cpp  tools.h
Core/src/: aabb.cpp  aabb.h  binary_tree.h  camera.cpp  camera.h  debug.cpp  debug.h  def.h  oc_tree.cpp  oc_tree.h  scene_graph.h
Core/src/BoundingVolumes/: aabb.cpp  aabb.h  bounding_sphere.cpp  bounding_sphere.h  general_bv.cpp  general_bv.h
Core/src/DataStructures/: binary_tree.h  oc_tree.cpp  oc_tree.h  uniform_grid.cpp  uniform_grid.h
Core/src/Entities/: entity.h  mesh.h  model.cpp  model.h  object.cpp  object.h
Core/src/Graphics/: vulkan_base.cpp  vulkan_base.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_tools.cpp  vulkan_tools.h  window.cpp  window.h
Core/src/Graphics/Allocation/: vulkan_allocator.cpp  vulkan_allocator.h
Core/src/Graphics/GraphicsObjects/: vertex.cpp  vertex.h  vulkan_model.cpp  vulkan_model.h
Core/src/Math/: dyn_mat.cpp  dyn_mat.h  dyn_vec.cpp  dyn_vec.h  fft.cpp  fft.h  hash_functions.cpp  hash_functions.h  mat4.cpp  mat4.h  mat4f.cpp  mat4f.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec2f.cpp  vec2f.h  vec3.cpp  vec3.h  vec3f.cpp  vec3f.h  vec3i.cpp  vec3i.h  vec3s.cpp  vec3s.h  vec4.cpp  vec4.h  vec4f.cpp  vec4f.h
Core/src/Memory/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  vertex_index_buffer.cpp  vertex_index_buffer.h  vkbuffer_region_allocator.cpp  vkbuffer_region_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_region_allocator.cpp  vulkan_buffer_region_allocator.h  vulkan_memory_allocator.cpp  vulkan_memory_allocator.h
Core/src/Objects/: entity.h  mesh.h
Core/src/Props/: collidable.cpp  collidable.h  movement_properties.cpp  movement_properties.h  physical_properties.cpp  physical_properties.h  renderable.cpp  renderable.h
Core/src/SceneGraph/: camera_node.cpp  camera_node.h  culling_walker.cpp  culling_walker.h  group_node.cpp  group_node.h  render_state.cpp  render_state.h  renderable_node.cpp  renderable_node.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  transform_node.cpp  transform_node.h
Core/src/Threading/: queue.h  thread_pool.cpp  thread_pool.h
Core/src/Vulkan/: vulkan_application.cpp  vulkan_application.h  vulkan_base.cpp  vulkan_base.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_device.cpp  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_tools.h  window.cpp  window.h
Core/src/graphics/: vertex.cpp  vertex.h  window.cpp  window.h
Core/src/math/: dyn_mat.cpp  dyn_mat.h  dyn_vec.cpp  dyn_vec.h  mat4.cpp  quaternion.cpp  quaternion.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
Core/src/objects/: entity.h  mesh.cpp  mesh.h  model.cpp  model.h
Core/x64/Debug/: main.obj.enc  vc141.idb
NextGengine/: CMakeLists.txt  NextGengine.h
NextGengine/shaders/: CMakeLists.txt
NextGengine/shaders/HelloTriangle/: helloTriangle.vert
NextGengine/shaders/PushConstants/: pushConstants.frag
NextGengine/shaders/triangle/: helloTriangle.frag
NextGengine/src/: CMakeLists.txt  NextGengine.cpp  NextGengine.h  def.h  ng_utility.cpp  ng_utility.h  thread_pool.cpp  thread_pool.h
NextGengine/src/Memory/: abstract_allocators.cpp  abstract_allocators.h
NextGengine/src/Resources/: resource_manager.cpp  resource_manager.h  resources.cpp  resources.h
NextGengine/src/Scene/: model_2D.cpp  model_2D.h  scene.cpp  scene.h
NextGengine/src/Threading/: thread_pool.cpp  thread_pool.h  thread_safe_queue.h
NextGengine/src/Vulkan/: vulkan_abstract_allocators.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_context.cpp  vulkan_context.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_storage.cpp  vulkan_storage.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_thread.cpp  vulkan_thread.h  vulkan_utility.cpp  vulkan_utility.h  vulkan_window.cpp  vulkan_window.h  vulkandef.h
NextGengine/src/Vulkan/OldMemory/: vulkan_abstract_allocators.cpp  vulkan_abstract_allocators.h  vulkan_allocator.cpp  vulkan_allocator.h
NextGengineCore/: CMakeLists.txt  NextGengine.h  NextGengineCore.h  pch.h
NextGengineCore/src/: CMakeLists.txt  ng_utility.cpp  ng_utility.h
NextGengineCore/src/Memory/: abstract_allocators.cpp  abstract_allocators.h
NextGengineCore/src/Resources/: resource_manager.cpp  resource_manager.h  resources.cpp  resources.h
NextGengineCore/src/Scene/: model.cpp  model.h  model_2D.h  scene.cpp  scene.h  scene_3D.cpp  scene_3D.h  scene_utility.cpp  scene_utility.h
NextGengineCore/src/Scene/3D/: scene_3D.cpp  scene_3D.h
NextGengineCore/src/Threading/: thread_pool.cpp  thread_pool.h
NextGengineCore/src/Vulkan/: vulkan_allocator.cpp  vulkan_allocator.h  vulkan_context.h  vulkan_debug.cpp  vulkan_device.cpp  vulkan_device.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_renderpass.h  vulkan_storage.cpp  vulkan_storage.h  vulkan_utility.h  vulkan_window.h
SamplesAndTests/: CMakeLists.txt  main.cpp
SamplesAndTests/HelloTriangle/: hello_triangle.cpp
SamplesAndTests/PushConstants/: push_constants.cpp
SamplesAndTests/TestNG/: test_ng.cpp
SamplesAndTests/TestResources/: test_resources.cpp
SamplesAndTests/TestResources2/: test_resources2.cpp
x64/Debug/: Core.ilk
x64/Release/: Core.iobj  Core.ipdb
(+90 files in other folders)
